# edge_detection_filter_gstreamer

./: CMakeLists.txt  README.md  main.c  main.cpp  test.c
myfilter/: CMakeLists.txt  Makefile  gstmyfilter.cpp  gstmyfilter.h
